--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= include_gon %>
+    <%= javascript_include_tag :application %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%#= favicon_link_tag %>
+    <%= favicon_link_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- reCAPTCHA -->
