--- a/app/views/charities/new.html.erb
+++ b/app/views/charities/new.html.erb
@@ -1,7 +1,16 @@
 <main class="mt-5">
   <div class="container">
 
-    <h1 class="text-center mb-4">Apply to Fund a Charitable Activity</h1>
+    <h1 class="text-center">Apply to Fund a Charitable Activity</h1>
+
+    <section class="team-section magazine-section text-center">
+      <p class="dark-color-dark-grey w-responsive mx-auto">
+        Service to others is the rent you pay for your room here on earth.
+        <br><em><small>―Mohammed Ali</small></em>
+      </p>
+    </section>
+
+    <hr>
 
     <%= render 'form', charity: @charity %>
 
