--- a/app/views/hardships/new.html.erb
+++ b/app/views/hardships/new.html.erb
@@ -1,7 +1,16 @@
 <main class="mt-5">
   <div class="container">
 
-    <h1 class="text-center mb-4">Apply for a Hardship</h1>
+    <h1 class="text-center">Apply for a Hardship</h1>
+
+    <section class="team-section magazine-section text-center">
+      <p class="dark-color-dark-grey w-responsive mx-auto">
+        When the going gets tough – the tough get going!
+        <br><em><small>―John Belushi</small></em>
+      </p>
+    </section>
+
+    <hr>
 
     <%= render 'form', hardship: @hardship %>
 
