--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <!--Main Navigation-->
 <header>
 
-  <nav class="navbar navbar-expand-md navbar-light bg-light-grey">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light-grey">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "TOCA_CARES_LOGO_FNL.png", style: "height: 30px", alt: "TOCA Cares Logo" %>
     <% end %>
