--- a/app/views/scholarships/new.html.erb
+++ b/app/views/scholarships/new.html.erb
@@ -1,7 +1,16 @@
 <main class="mt-5">
   <div class="container">
 
-    <h1 class="text-center mb-4">Apply for a Scholarship</h1>
+    <h1 class="text-center">Apply for a Scholarship</h1>
+
+    <section class="team-section magazine-section text-center">
+      <p class="dark-color-dark-grey w-responsive mx-auto">
+        Knowledge is a weapon. I intend to be formidably armed.
+        <br><em><small>―Terry Goodkind</small></em>
+      </p>
+    </section>
+
+    <hr>
 
     <%= render 'form', scholarship: @scholarship %>
 
