--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,17 @@
   </head>
 
   <body>
+    
     <div class="non-footer">
       <%= render 'layouts/navbar' %>
       <%= render 'layouts/notifications' %>
 
       <%= yield %>
     </div>
+
     <%= render 'layouts/footer' %>
+
+    <%= yield :additional_js %>
+
   </body>
 </html>
