Index Copy Changes

--- a/app/views/hardships/new.html.erb
+++ b/app/views/hardships/new.html.erb
@@ -5,8 +5,8 @@
 
     <section class="team-section magazine-section text-center">
       <p class="dark-color-dark-grey w-responsive mx-auto">
-        When the going gets tough – the tough get going!
-        <br><em><small>―John Belushi</small></em>
+        I get by with a little help from my friends.
+        <br><em><small>―Paul McCartney/John Lennon</small></em>
       </p>
     </section>
 
