--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
               </p>
             </div>
             <p class="h5 thin mb-5">
-              Explore how this works and feel the love.
+              Explore how it works and feel the love.
             </p>
           </div> <!-- container -->
         </div> <!-- row -->
@@ -51,8 +51,8 @@
                        <!--Title-->
                        <h4 class="card-title toca-uppercase">Hardship</h4>
                        <h5 class="card-quote color-toca-red">
-                         When the going gets tough – the tough get going!
-                         <br><em><small>―John Belushi</small></em>
+                         I get by with a little help from my friends.
+                         <br><em><small>―Paul McCartney/John Lennon</small></em>
                        </h5>
                        <p class="card-text">
                          78% of U.S. workers are living paycheck to paycheck. Unexpected financial challenges can cause good people to go tilt.
@@ -79,7 +79,7 @@
                  <h4 class="card-title toca-uppercase">Scholarship</h4>
                  <!--Text-->
                  <h5 class="card-quote color-toca-red">
-                   Knowledge is a weapon. I intend to be formidably armed.
+                   Knowledge is a weapon. I&nbsp;intend to be formidably armed.
                    <br><em><small>―Terry Goodkind</small></em>
                  </h5>
                  <p class="card-text">
@@ -114,7 +114,7 @@
                        <p class="card-text">
                          Our team is going to positively impact each community we touch.  TOCACares wants to support your involvement in local charities.
                          <br><br>
-                         If you have an idea of how to work with registered charities, TOCACares will pay 80% of your costs or in some case make direct contributions.
+                         If you have an idea of how to work with tax-deductible charities, TOCACares will pay 80% of your costs to participate (membership fee, out of pocket costs of being a Big Brother or Big Sister, etc.), or, in some cases, make direct contributions to the charity.
                        </p>
                        <%= link_to new_charity_path, class: "btn btn-primary btn-lg" do %>
                         Apply Now
